default/objects/PPR_Legacy_Opportunity_History__c/PPR_Legacy_Opportunity_History__c.object-meta.xml
<CustomObject>
    <label>PPR Legacy Opportunity History</label>
    <nameField>
        <label>PPR Legacy Opportunity History Имя</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPR Legacy Opportunity History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>