default/objects/PPR_Legacy_Opportunity_History__c/fields/Edited_By__c.field-meta.xml
<CustomField>
    <fullName>Edited_By__c</fullName>
    <description>имя автора изменения</description>
    <label>Edited By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>