default/objects/PPR_Legacy_Opportunity_History__c/fields/Field_Event__c.field-meta.xml
<CustomField>
    <fullName>Field_Event__c</fullName>
    <description>Поле в которое внесено изменение</description>
    <label>Field / Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>