default/objects/PPR_Legacy_Opportunity_History__c/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Id</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>PPR Legacy Opportunity History</relationshipLabel>
    <relationshipName>PPR_Legacy_Opportunity_History</relationshipName>
    <type>Lookup</type>
</CustomField>