default/objects/PPR_Legacy_Opportunity_History__c/fields/PPR_Legacy_Opportunity_History_ID__c.field-meta.xml
<CustomField>
    <fullName>PPR_Legacy_Opportunity_History_ID__c</fullName>
    <label>PPR Legacy Opportunity History ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>